# idx2

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  idx2.cpp
Source/Applications/: CMakeLists.txt  convert.py  idx2App.cpp
Source/Core/: CMakeLists.txt  idx2Common.cpp  idx2Common.h  idx2Read.cpp  idx2Write.cpp
